--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
     "react-instagram-embed": "^1.5.0",
+    "react-router-dom": "^5.1.2",
+    "react-router-scroll-top": "^0.2.1",
     "react-scrollspy": "^3.4.0",
     "react-snipcart": "^0.1.6",
     "reactstrap": "^8.4.1",
